Fixing spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,6 @@
     font-family: 'Muli', sans-serif;
 }
 .nav-section {
-    padding-top: 75px;
-    padding-bottom: 25px;
     max-width: 1024px;
 }
 
@@ -72,10 +70,11 @@
 .info-section {
     color: #212d40;
     background-color: white;
-    padding: 1em;
+    padding: .5em;
     text-align: center;
     opacity: .9;
     font-family: 'Copse', serif;
+    margin-top: 20px;
 }
 
 .info-section-parallax {
